✅ test(mcp): Add comprehensive test infrastructure
- Configure Jest for ES modules with TypeScript support
- Add smoke tests for basic server functionality
- Create integration test examples for MCP handlers
- Update tsconfig with isolatedModules for ts-jest compatibility
- Add test scripts with experimental VM modules support

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -10,14 +10,16 @@
     "start": "node build/index.js",
     "build": "tsc && chmod 755 build/index.js",
     "typecheck": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
+    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
     "prestart": "npm run build",
     "check": "biome check --write",
     "lint": "biome lint --write",
     "format": "biome format --write",
-    "ci": "biome ci"
+    "ci": "biome ci",
+    "test:manual": "node test-manual.js",
+    "test:server": "node -e \"console.log('Starting server... Send JSON-RPC commands via stdin'); require('dotenv').config(); import('./build/index.js')\""
   },
   "engines": {
     "node": ">=20.0.0"
