--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -15,7 +15,8 @@
     "outDir": "./build",
     "declaration": true,
     "sourceMap": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build"]
