--- a/mcp-server/biome.json
+++ b/mcp-server/biome.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "ignore": [] },
+  "files": {
+    "ignoreUnknown": false,
+    "ignore": ["**/*.test.*", "**/__tests__/**", "test-*.js", "test-*.ts"]
+  },
   "formatter": {
     "enabled": true,
     "useEditorconfig": true,
