--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -5,10 +5,7 @@
   "private": true,
   "type": "module",
   "main": "build/index.js",
-  "files": [
-    "build",
-    "src"
-  ],
+  "files": ["build", "src"],
   "scripts": {
     "start": "node build/index.js",
     "build": "tsc && chmod 755 build/index.js",
