--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -19,5 +19,5 @@
     "isolatedModules": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "src/**/*.test.ts", "src/__tests__/**/*"]
 }
