--- a/.env-example
+++ b/.env-example
@@ -2,11 +2,11 @@
 # Copy this file to .env and fill in the values
 
 # Server configuration
-PORT=3000
-LOG_LEVEL=info
+PORT= 
+LOG_LEVEL= 
 
 # API Authentication
 # Attio workspace access token
-ATTIO_ACCESS_TOKEN=your_workspace_access_token_here
+ATTIO_ACCESS_TOKEN= 
 
 # Add any other environment variables your API might need
