--- a/.gitignore
+++ b/.gitignore
@@ -4,25 +4,78 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 dev-debug.log
 
-# Dependency directories
+# Dependencies
 node_modules/
+node_modules
+.pnp
+.pnp.js
 
-# Environment variables
-.env
+# Build outputs
+build/
+build
+dist/
+dist
+*.tsbuildinfo
+
+# Test coverage
+coverage/
+coverage
+*.lcov
+.nyc_output
+
+# Reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Build artifacts
+.grunt
+bower_components
+jspm_packages/
+web_modules/
+.lock-wscript
 
 # Editor directories and files
 .idea
 .vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*.sublime-workspace
+*.sublime-project
+
+# Caches
+.eslintcache
+.stylelintcache
+.node_repl_history
+.browserslistcache
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # OS specific
 .DS_Store
+Thumbs.db
 
 # Task files
 tasks.json
@@ -33,15 +86,6 @@ mcp-server/node_modules/
 mcp-server/build/
 mcp-server/.env
 
-# Build outputs
-build/
-dist/
-*.tsbuildinfo
-
-# Test coverage
-coverage/
-*.lcov
-
 # Backups
 *.backup.*
 
@@ -50,3 +94,4 @@ coverage/
 .roo/
 .taskmaster/ 
 attio.json
+README-OpenAPI-to-MCP-Generator.md
