🔧 chore: update .gitignore and add new Cursor rules
- Remove .cursor/ from .gitignore to allow tracking of Cursor IDE configuration files
- Add new rules for Cursor in .cursor/rules directory, including guidelines for creating and maintaining rules, a development workflow guide, and taskmaster command references
- Introduce self-improvement guidelines for Cursor rules to enhance consistency and effectiveness
- Create a configuration file for Taskmaster to manage AI model settings and project parameters
- Add a PRD template for tool name automation system to streamline project documentation

--- a/.gitignore
+++ b/.gitignore
@@ -90,8 +90,7 @@ mcp-server/.env
 *.backup.*
 
 # Cursor/Claude specific
-.cursor/
 .roo/
-.taskmaster/ 
-attio.json
-README-OpenAPI-to-MCP-Generator.md
+
+# Archive - backup/old files
+archive/
