⬆️ feat: migrate from npm to bun and clean up project
- Replace npm scripts with bun equivalents
- Migrate Jest to bun:test with native test runner
- Remove orphaned npm and Jest files (package-lock.json, jest.config.js)
- Add bun test configuration and setup files
- Update documentation to reflect bun usage
- Clean up empty directories (tests/, examples/, scripts/)
- Fix linting issues and unused variables
- Improve biome configuration to ignore large spec files
- Maintain full test coverage with faster execution

Breaking changes:
- Requires bun instead of npm for development
- Test runner changed from Jest to bun:test

--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,8 @@
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["**/*.test.*", "**/__tests__/**", "test-*.js", "test-*.ts"]
+    "ignore": ["**/*.test.*", "**/__tests__/**", "test-*.js", "test-*.ts", "docs/spec/attio.json"],
+    "maxSize": 2097152
   },
   "formatter": {
     "enabled": true,
