--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "start": "node build/index.js",
     "build": "tsc && chmod 755 build/index.js",
     "typecheck": "tsc --noEmit",
-    "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
-    "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
-    "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
-    "prestart": "npm run build",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
+    "prestart": "bun run build",
     "check": "biome check --write",
     "lint": "biome lint --write",
     "format": "biome format --write",
     "ci": "biome ci",
-    "test:manual": "node tools/test-manual.js",
+    "test:manual": "bun tools/test-manual.js",
     "test:demo": "bash tools/demo.sh",
-    "test:names": "node tools/test-transformed-names.js",
-    "test:server": "node -e \"console.log('Starting server... Send JSON-RPC commands via stdin'); require('dotenv').config(); import('./build/index.js')\"",
-    "apply-tool-names": "tsx src/apply-tool-names.ts",
-    "postbuild": "npm run apply-tool-names"
+    "test:names": "bun tools/test-transformed-names.js",
+    "test:server": "bun -e \"console.log('Starting server... Send JSON-RPC commands via stdin'); process.loadEnvFile?.('.env'); import('./build/index.js')\"",
+    "apply-tool-names": "bun src/apply-tool-names.ts",
+    "postbuild": "bun run apply-tool-names"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -37,12 +37,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/jest": "^29.5.14",
+    "@types/bun": "^1.2.15",
     "@types/node": "^22.15.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.3.4",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
