📝 docs: enhance README with bun migration details and author info
- Update README to reflect bun migration and improved features
- Add prerequisites section with bun installation
- Update all development commands to use bun instead of npm
- Add comprehensive development commands section
- Enhance feature list with performance and installation highlights
- Add contributing guidelines and license information
- Include author attribution in package.json with LinkedIn profile
- Add repository metadata and keywords for better discoverability
- Update project description to highlight high-performance nature

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "attio-mcp-server",
   "version": "1.0.0",
-  "description": "MCP Server generated from OpenAPI spec for attio-mcp-server",
+  "description": "High-performance Model Context Protocol server for Attio API integration with AI assistants",
+  "author": {
+    "name": "Brian Roach",
+    "url": "https://linkedin.com/in/brian-roach-"
+  },
   "private": true,
   "type": "module",
   "main": "build/index.js",
@@ -25,8 +29,25 @@
     "apply-tool-names": "bun src/apply-tool-names.ts",
     "postbuild": "bun run apply-tool-names"
   },
+  "keywords": [
+    "attio",
+    "mcp",
+    "model-context-protocol",
+    "ai",
+    "assistant",
+    "claude",
+    "cursor",
+    "api",
+    "crm"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsbrex/attio-mcp-server"
+  },
+  "homepage": "https://github.com/itsbrex/attio-mcp-server#readme",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "bun": ">=1.0.0"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.0",
