🔧 config: standardize environment configuration
- Remove duplicate .env-example file
- Keep standard .env.example with improved documentation
- Add clear instructions and example values
- Include direct link to Attio API settings page
- Simplify configuration with required/optional sections

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
-# MCP Server Environment Variables
-# Copy this file to .env and fill in the values
+# Attio MCP Server Environment Variables
+# Copy this file to .env and fill in your actual values
 
-# Server configuration
-PORT=
-LOG_LEVEL=
+# Required: Attio workspace access token
+# Get your token from: https://app.attio.com/settings/api
+ATTIO_ACCESS_TOKEN=your_workspace_access_token_here
 
-# API Authentication
-# Attio workspace access token
-ATTIO_ACCESS_TOKEN=
-
-# Add any other environment variables your API might need
+# Optional: Server configuration
+# PORT=3000
+# LOG_LEVEL=info
